<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_border"
        android:title="@string/favorites" />

    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_shopping_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_outline_person_outline"
        android:title="@string/profile" />
</menu>