<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    tools:context=".ui.fragments.OrderDetailsFragment">


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

   <androidx.core.widget.NestedScrollView
       android:id="@+id/scrollView"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toTopOf="@id/otherInformationTV"
       android:layout_marginBottom="@dimen/margin">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <TextView
              android:id="@+id/orderNumberLabelTV"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin"
              android:layout_marginTop="@dimen/margin"
              android:fontFamily="@font/poppins_medium"
              android:text="@string/orderNo"
              android:textColor="@color/text_gray"
              android:textSize="@dimen/textSize12.5"
              app:layout_constraintBottom_toTopOf="@id/trackingCodeText"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <TextView
              android:id="@+id/orderNumberTV"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:ellipsize="end"
              android:fontFamily="@font/poppins_medium"
              android:maxLines="1"
              android:text="56198449874"
              android:textColor="@color/text_gray"
              android:textSize="@dimen/textSize12.5"
              app:layout_constraintBottom_toBottomOf="@id/orderNumberLabelTV"
              app:layout_constraintEnd_toStartOf="@id/orderDateTv"
              app:layout_constraintStart_toEndOf="@id/orderNumberLabelTV"
              app:layout_constraintTop_toTopOf="@id/orderNumberLabelTV" />

          <TextView
              android:id="@+id/orderDateTv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/margin"
              android:alpha="0.5"
              android:fontFamily="@font/poppins_regular"
              android:text="12/12/2022"
              android:textColor="@color/text_gray"
              android:textSize="@dimen/textSize11"
              app:layout_constraintBottom_toBottomOf="@id/orderNumberLabelTV"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@id/orderNumberTV"
              app:layout_constraintTop_toTopOf="@id/orderNumberLabelTV" />

          <TextView
              android:id="@+id/trackingCodeText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin"
              android:layout_marginTop="@dimen/xhdpi10"
              android:alpha="0.5"
              android:fontFamily="@font/poppins_regular"
              android:text="@string/tracking_code"
              android:textColor="@color/text_gray"
              android:textSize="@dimen/textSize11"
              app:layout_constraintBottom_toTopOf="@id/QuantityTV"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/orderNumberLabelTV" />

          <TextView
              android:id="@+id/trackingNumberTV"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:elevation="@dimen/xhdpi150"
              android:ellipsize="end"
              android:fontFamily="@font/poppins_regular"
              android:maxLines="1"
              android:text="YA215554"
              android:layout_marginStart="@dimen/xhdpi2.5"
              android:textColor="@color/text_gray"
              android:textSize="@dimen/textSize11"
              app:layout_constraintBottom_toBottomOf="@id/trackingCodeText"
              app:layout_constraintEnd_toStartOf="@id/statusTV"
              app:layout_constraintStart_toEndOf="@id/trackingCodeText"
              app:layout_constraintTop_toTopOf="@id/trackingCodeText" />

          <TextView
              android:id="@+id/statusTV"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/margin"
              android:elevation="@dimen/xhdpi150"
              android:ellipsize="start"
              android:fontFamily="@font/poppins_regular"
              android:singleLine="true"
              android:text="Delivered"
              android:textColor="@color/green"
              android:textSize="@dimen/textSize11"
              app:layout_constraintBottom_toBottomOf="@id/trackingCodeText"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="@id/trackingCodeText" />

          <TextView
              android:id="@+id/QuantityTV"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin"
              android:layout_marginTop="@dimen/xhdpi10"
              android:elevation="@dimen/xhdpi150"
              android:ellipsize="end"
              android:fontFamily="@font/poppins_regular"
              android:maxLines="1"
              android:text="3"
              android:textColor="@color/text_gray"
              android:textSize="@dimen/textSize11"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/trackingCodeText" />

          <TextView
              android:id="@+id/QuantityLabelTV"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/xhdpi10"
              android:elevation="@dimen/xhdpi150"
              android:ellipsize="end"
              android:layout_marginStart="@dimen/xhdpi2.5"
              android:fontFamily="@font/poppins_regular"
              android:maxLines="1"
              android:text="@string/items"
              android:textColor="@color/text_gray"
              android:textSize="@dimen/textSize11"
              app:layout_constraintStart_toEndOf="@id/QuantityTV"
              app:layout_constraintTop_toBottomOf="@id/trackingCodeText" />

          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/recyclerView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="@dimen/margin"
              android:layout_marginBottom="@dimen/margin"
              android:paddingHorizontal="@dimen/margin"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/QuantityTV"
              app:layout_constraintVertical_bias="0.0"
              tools:itemCount="3"
              tools:listitem="@layout/order_detail_item" />

      </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>

       <TextView
           android:id="@+id/otherInformationTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/margin"
           android:fontFamily="@font/poppins_medium"
           android:text="@string/otherInformations"
           android:textColor="@color/text_gray"
           android:layout_marginBottom="@dimen/xhdpi10"
           app:layout_constraintBottom_toTopOf="@id/shippingAddressLabelTV"
           app:layout_constraintStart_toStartOf="parent" />

       <TextView
           android:id="@+id/shippingAddressLabelTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_regular"
           android:textColor="@color/text_gray"
           android:layout_marginStart="@dimen/margin"
           android:alpha="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@id/shippingAddressTV"
           android:text="@string/ShippingAddress"/>

       <TextView
           android:id="@+id/shippingAddressTV"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/xhdpi10"
           android:layout_marginStart="@dimen/xhdpi2.5"
           android:ellipsize="end"
           android:fontFamily="@font/poppins_regular"
           android:maxLines="2"
           android:text="@string/ShippingAddress"
           android:textColor="@color/text_gray"
           app:layout_constraintBottom_toTopOf="@id/paymentMethodLabelTV"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@id/shippingAddressLabelTV" />


       <TextView
           android:id="@+id/paymentMethodLabelTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_regular"
           android:textColor="@color/text_gray"
           android:layout_marginStart="@dimen/margin"
           android:layout_marginBottom="@dimen/xhdpi10"
           android:alpha="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toTopOf="@id/deliveryMethodLabelTv"
           android:text="@string/paymentMethod"/>

       <TextView
           android:id="@+id/paymentMethodTV"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:ellipsize="end"
           android:fontFamily="@font/poppins_regular"
           android:maxLines="1"
           android:layout_marginStart="@dimen/xhdpi2.5"

           android:text="@string/paymentOnDelivery"
           android:textColor="@color/text_gray"
           app:layout_constraintBottom_toBottomOf="@id/paymentMethodLabelTV"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="@id/shippingAddressTV"
           app:layout_constraintTop_toTopOf="@id/paymentMethodLabelTV" />

       <TextView
           android:id="@+id/deliveryMethodLabelTv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_regular"
           android:textColor="@color/text_gray"
           android:alpha="0.5"
           android:layout_marginStart="@dimen/margin"
           android:layout_marginBottom="@dimen/xhdpi10"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toTopOf="@id/discountLabelTV"
           android:text="@string/deliveryMethod"/>

       <TextView
           android:id="@+id/deliveryMethodTv"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:ellipsize="end"
           android:fontFamily="@font/poppins_regular"
           android:maxLines="1"
           android:layout_marginStart="@dimen/xhdpi2.5"

           android:text="@string/deliveryMethod"
           android:textColor="@color/text_gray"
           app:layout_constraintBottom_toBottomOf="@id/deliveryMethodLabelTv"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="@id/shippingAddressTV"
           app:layout_constraintTop_toTopOf="@id/deliveryMethodLabelTv" />

       <TextView
           android:id="@+id/discountLabelTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_regular"
           android:textColor="@color/text_gray"
           android:alpha="0.5"
           android:layout_marginStart="@dimen/margin"
           android:layout_marginBottom="@dimen/xhdpi10"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintBottom_toTopOf="@id/totalAmountLabelTV"
           android:text="@string/discount" />

       <TextView
           android:id="@+id/discountTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_regular"
           android:textColor="@color/text_gray"
           android:layout_marginStart="@dimen/xhdpi2.5"

           app:layout_constraintTop_toTopOf="@id/discountLabelTV"
           app:layout_constraintBottom_toBottomOf="@id/discountLabelTV"
           app:layout_constraintStart_toStartOf="@id/shippingAddressTV"
           android:text="-" />


       <TextView
           android:id="@+id/totalAmountLabelTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_regular"
           android:textColor="@color/text_gray"
           android:alpha="0.5"
           android:layout_marginStart="@dimen/margin"
           android:layout_marginBottom="@dimen/margin"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:text="@string/total_amount" />

       <TextView
           android:id="@+id/totalAmountTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/poppins_regular"
           android:textColor="@color/text_gray"
           android:layout_marginStart="@dimen/xhdpi2.5"

           app:layout_constraintTop_toTopOf="@id/totalAmountLabelTV"
           app:layout_constraintBottom_toBottomOf="@id/totalAmountLabelTV"
           app:layout_constraintStart_toStartOf="@id/shippingAddressTV"
           android:text="$129.99" />


</androidx.constraintlayout.widget.ConstraintLayout>

