<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_black"
    android:orientation="vertical"
    tools:context=".ui.fragments.AddShippingAddressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin">

        <TextView
            android:id="@+id/myAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/albertasans_meduim"
            android:text="@string/myAccount"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textSize15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myAccountTV"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="10dip"
            app:boxCornerRadiusTopEnd="@dimen/xhdpi5"
            app:boxCornerRadiusTopStart="@dimen/xhdpi5"
            android:hint="@string/full_name"
            android:textColorHint="@color/text_gray_darker"
            app:hintTextColor="@color/accent"
            app:boxBackgroundColor="@color/gray"
            app:boxCornerRadiusBottomEnd="@dimen/xhdpi5"
            app:boxCornerRadiusBottomStart="@dimen/xhdpi5"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:maxLines="1"
                android:inputType="text"
                android:fontFamily="@font/albertasans_regular"
                android:textSize="@dimen/textSize12.5"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ageTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullNameTIL"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="10dip"
            app:boxCornerRadiusTopEnd="@dimen/xhdpi5"
            app:boxCornerRadiusTopStart="@dimen/xhdpi5"
            android:hint="@string/age"
            android:textColorHint="@color/text_gray_darker"
            app:hintTextColor="@color/accent"
            app:boxBackgroundColor="@color/gray"
            app:boxCornerRadiusBottomEnd="@dimen/xhdpi5"
            app:boxCornerRadiusBottomStart="@dimen/xhdpi5"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:maxLines="1"
                android:inputType="number"
                android:fontFamily="@font/albertasans_regular"
                android:textSize="@dimen/textSize12.5"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/phoneNumberCV"
            android:layout_width="0dp"
            android:layout_height="@dimen/xhdpi40"
            app:layout_constraintTop_toBottomOf="@id/ageTIL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:cardCornerRadius="@dimen/xhdpi5"
            app:cardBackgroundColor="@color/gray"/>

        <TextView
            android:id="@+id/phoneNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/phoneNumberCV"
            app:layout_constraintBottom_toBottomOf="@id/phoneNumberCV"
            app:layout_constraintStart_toStartOf="@id/phoneNumberCV"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textSize12.5"
            android:layout_marginStart="@dimen/xhdpi10"
            android:text="+213781830321"
            android:elevation="@dimen/xhdpi10"/>

        <ImageView
            android:id="@+id/editNumberIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/phoneNumberCV"
            app:layout_constraintBottom_toBottomOf="@id/phoneNumberCV"
            app:layout_constraintEnd_toEndOf="@id/phoneNumberCV"
            android:layout_marginEnd="@dimen/xhdpi10"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textSize12.5"
            android:text="+213781830321"
            android:elevation="@dimen/xhdpi10"
            android:src="@drawable/ic_outline_edit"
            app:tint="@color/accent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberCV"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/textSize12.5"
            android:fontFamily="@font/albertasans_meduim"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/bg_black"
            android:padding="@dimen/xhdpi10"
            android:layout_marginTop="@dimen/xhdpi30"
            app:cornerRadius="@dimen/xhdpi20"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>